--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "http-status-codes": "^2.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.10.5",
+    "mongoose": "4",
     "morgan": "^1.10.0",
     "yargs": "^16.0.3"
   }
