--- a/env/prod.env
+++ b/env/prod.env
@@ -6,7 +6,7 @@ HOST=localhost
 PORT=7000
 
 # Database
-MONGO_HOST=localhost
+MONGO_HOST=10.0.1.8
 MONGO_PORT=27017
 MONGO_USER=salina
 MONGO_PASSWORD=rk2vceovp1q3wxri6z1s6zdt0c94y1af
