Add search place endpoint

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "lodash": "^4.17.20",
     "mongoose": "4",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
+    "qs": "^6.9.4",
     "yargs": "^16.0.3"
   }
 }
