--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-status-codes": "^2.1.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mongoose": "4",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
